--- a/Scrumproject/MainWindow.xaml
+++ b/Scrumproject/MainWindow.xaml
@@ -1,8 +1,52 @@
 ﻿<Window x:Class="Scrumproject.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:scrumproject="clr-namespace:Scrumproject"
+        Title="MainWindow" Height="612.687" Width="847.388">
+
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="17*"/>
+            <ColumnDefinition Width="16*"/>
+            <ColumnDefinition Width="806*"/>
+        </Grid.ColumnDefinitions>
+        <TabControl Grid.ColumnSpan="3">
+            <TabItem Header="Rapportering">
+                <Canvas>
+                    <DatePicker x:Name="dpStartDate" Canvas.Left="165" Canvas.Top="11"></DatePicker>
+                    <DatePicker x:Name="dpEndDate" Canvas.Left="378" Canvas.Top="19"></DatePicker>
+                    <DatePicker x:Name="dpFreeDay" Canvas.Left="165" Canvas.Top="55"></DatePicker>
+                    <Label x:Name="lbStartDate" Content="Startdatum
+                           " Canvas.Left="26" Canvas.Top="10" Width="109"/>
+                    <Label x:Name="lbEndDate" Content="Slutdatum" Canvas.Left="308" Canvas.Top="17" Width="65"/>
+                    <Label x:Name="lbFreeDay" Content="Välj en ledig dag" Canvas.Left="26" Canvas.Top="54" Width="109"/>
+                    <ListView x:Name="lvDates" Height="100" Width="100" Canvas.Left="165" Canvas.Top="84"/>
+                    <ListView/>
+                    <Button x:Name="btnRemoveDateFromLvDates" Content="Ta bort datum
+                            " Canvas.Left="26" Canvas.Top="119" Width="82"/>
+                    <Button x:Name="btnCreateDraft" Content="Skapa Utkast
+                            " Canvas.Left="719" Canvas.Top="496" Width="75" RenderTransformOrigin="0.071,-0.846"/>
+                    <Label x:Name="lbCarTripLength" Content="Bilresor" Canvas.Left="26" Canvas.Top="235" RenderTransformOrigin="0.362,-0.746"/>
+                    <TextBox x:Name="lbCarTripLengthKm" Height="23" Canvas.Left="120" TextWrapping="Wrap" Text="Km" Canvas.Top="239" Width="120"/>
+                    <Label x:Name="lbPartSection" Content="Delsträckor" Canvas.Left="378" Canvas.Top="55" RenderTransformOrigin="1.68,0.592" Width="102"/>
+                    <TextBox x:Name="tbPartSection" Height="111" Canvas.Left="378" TextWrapping="Wrap" Text="" Canvas.Top="86" Width="120"/>
+
+
+                </Canvas>
+            </TabItem>
+            <TabItem Header="Förskottsansökan" />
+            <TabItem Header="Administratörs" />
+            <ListView Height="100" Width="100">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </TabControl>
     </Grid>
+
+
+
+
 </Window>
