Fixat Skapa och spara utkast

--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -5,25 +5,32 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" x:Class="Scrumproject.MainWindow"
         Title="MainWindow" Height="612.687" Width="847.388">
 
-    <Grid>
+    <Grid Margin="10,23,0,0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="527*"/>
+            <RowDefinition Height="27*"/>
+            <RowDefinition Height="5*"/>
+        </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="17*"/>
             <ColumnDefinition Width="16*"/>
             <ColumnDefinition Width="806*"/>
         </Grid.ColumnDefinitions>
-        <TabControl Grid.ColumnSpan="3">
-            <TabItem Header="Rapportering" d:IsHidden="True">
+        <TabControl Margin="-10,-15,10,0" Grid.RowSpan="3" Grid.ColumnSpan="3">
+            <TabItem Header="Rapportering">
                 <Canvas>
                     <DatePicker x:Name="dpStartDate" Canvas.Left="165" Canvas.Top="11"/>
                     <DatePicker x:Name="dpEndDate" Canvas.Left="378" Canvas.Top="19"/>
+                    <Button x:Name="btnLoadDraft" Content="Ladda sparat utkast" Height="20" Width="121" Canvas.Left="39" Canvas.Top="500" Click="btnLoadDraft_Click"/>
                     <DatePicker x:Name="dpFreeDay" Canvas.Left="165" Canvas.Top="55"/>
                     <Label x:Name="lbStartDate" Content="Startdatum                            " Canvas.Left="26" Canvas.Top="10" Width="109"/>
                     <Label x:Name="lbEndDate" Content="Slutdatum" Canvas.Left="308" Canvas.Top="17" Width="65"/>
+                    <Label x:Name="lbDraftSaved" Height="27" Width="79" Canvas.Left="713" Canvas.Top="493"/>
                     <Label x:Name="lbFreeDay" Content="Välj en ledig dag" Canvas.Left="26" Canvas.Top="54" Width="109"/>
                     <ListView x:Name="lvDates" Height="100" Width="100" Canvas.Left="165" Canvas.Top="84"/>
                     <ListView/>
                     <Button x:Name="btnRemoveDateFromLvDates" Content="Ta bort datum                             " Canvas.Left="26" Canvas.Top="119" Width="82"/>
-                    <Button x:Name="btnCreateDraft" Content="Skapa Utkast                             " Canvas.Left="719" Canvas.Top="496" Width="75" RenderTransformOrigin="0.071,-0.846" Click="btnCreateDraft_Click"/>
+                    <Button x:Name="btnCreateDraft" Content="Spara Utkast" Canvas.Left="719" Canvas.Top="496" Width="75" RenderTransformOrigin="0.071,-0.846" Click="btnCreateDraft_Click"/>
                     <Label x:Name="lbCarTripLength" Content="Bilresor" Canvas.Left="26" Canvas.Top="235" RenderTransformOrigin="0.362,-0.746"/>
                     <TextBox x:Name="lbCarTripLengthKm" Height="23" Canvas.Left="120" TextWrapping="Wrap" Text="Km" Canvas.Top="239" Width="120"/>
                     <Label x:Name="lbPartSection" Content="Delsträckor" Canvas.Left="378" Canvas.Top="55" RenderTransformOrigin="1.68,0.592" Width="102"/>
