--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -11,9 +11,9 @@
             <ColumnDefinition Width="528*"/>
             <ColumnDefinition Width="294*"/>
         </Grid.ColumnDefinitions>
-        <TabControl Grid.ColumnSpan="4" Margin="-10,10,10,-10">
+        <TabControl Grid.ColumnSpan="4" Margin="-10,0,10,0">
             <TabItem Header="Rapportering">
-                <Canvas Margin="0,1,0,-1">
+                <Canvas Margin="0,-3,0,3">
                     <DatePicker x:Name="dpStartDate" Canvas.Left="165" Canvas.Top="11"></DatePicker>
                     <DatePicker x:Name="dpEndDate" Canvas.Left="378" Canvas.Top="13"></DatePicker>
                     <Label x:Name="lbStartDate" Content="Startdatum
@@ -23,15 +23,15 @@
                     <ListView/>
                     <Button x:Name="btnCreateDraft" Content="Skapa Utkast
                             " Canvas.Left="471" Canvas.Top="505" Width="75" RenderTransformOrigin="0.071,-0.846"/>
-                    <Label x:Name="lbCarTripLength" Content="Bilresor" Canvas.Left="38" Canvas.Top="120" RenderTransformOrigin="0.362,-0.746"/>
-                    <Label x:Name="lbDagar" Content="Dagar" Canvas.Left="45" Canvas.Top="176" RenderTransformOrigin="0.362,-0.746"/>
-                    <Label x:Name="lbLand" Content="Land" Canvas.Left="165" Canvas.Top="176" RenderTransformOrigin="0.362,-0.746"/>
-                    <TextBox x:Name="lbCarTripLengthKm" Height="23" Canvas.Left="165" TextWrapping="Wrap" Text="Km" Canvas.Top="120" Width="102"/>
-                    <Label x:Name="lbWhatHaveIDoneToday" Content="Noteringar" Canvas.Left="601" Canvas.Top="9" RenderTransformOrigin="0.659,0.185"/>
-                    <TextBox x:Name="tbNotes" Height="113" Canvas.Left="594" TextWrapping="Wrap" Text="" Canvas.Top="54" Width="121"/>
+                    <Label x:Name="lbCarTripLength" Content="Bilresor" Canvas.Left="38" Canvas.Top="91" RenderTransformOrigin="0.362,-0.746"/>
+                    <Label x:Name="lbDagar" Content="Dagar" Canvas.Left="38" Canvas.Top="149" RenderTransformOrigin="0.362,-0.746"/>
+                    <Label x:Name="lbLand" Content="Land" Canvas.Left="147" Canvas.Top="149" RenderTransformOrigin="0.362,-0.746"/>
+                    <TextBox x:Name="lbCarTripLengthKm" Height="23" Canvas.Left="99" TextWrapping="Wrap" Text="Km" Canvas.Top="91" Width="102"/>
+                    <Label x:Name="lbWhatHaveIDoneToday" Content="Vad har gjorts under resan:" Canvas.Left="594" Canvas.Top="17" RenderTransformOrigin="0.659,0.185"/>
+                    <TextBox x:Name="tbDoneOnTrip" Height="113" Canvas.Left="594" TextWrapping="Wrap" Text="" Canvas.Top="54" Width="121"/>
                     <TextBox Height="23" Canvas.Left="165" TextWrapping="Wrap" Text="" Canvas.Top="58" Width="102"/>
-                    <ComboBox Canvas.Left="165" Canvas.Top="207" Width="120"/>
-                    <ListView Height="100" Canvas.Left="45" Canvas.Top="207" Width="100">
+                    <ComboBox Canvas.Left="147" Canvas.Top="180" Width="120"/>
+                    <ListView Height="100" Canvas.Left="35" Canvas.Top="180" Width="100">
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn/>
@@ -69,9 +69,25 @@
                     <Button x:Name="btnSendReport" Content="Skicka Rapport
                             " Canvas.Left="716" Canvas.Top="505" Width="84"/>
                     <Label Content="Maxbelopp för land
-                           " Canvas.Left="169" Canvas.Top="250" Width="116"/>
-                    <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="165" Canvas.Top="325" Width="75"/>
-                    <Label x:Name="lbMaxSumSpecificCountry" Content="" Canvas.Left="169" Canvas.Top="281" RenderTransformOrigin="1.556,2.432" Width="93"/>
+                           " Canvas.Left="147" Canvas.Top="207" Width="116"/>
+                    <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="35" Canvas.Top="292" Width="75"/>
+                    <Label x:Name="lbMaxSumSpecificCountry" Content="" Canvas.Left="147" Canvas.Top="238" RenderTransformOrigin="1.556,2.432" Width="93"/>
+                    <TextBox x:Name="tbNotes" Height="178" Canvas.Left="594" TextWrapping="Wrap" Text="" Canvas.Top="207" Width="153"/>
+                    <Label x:Name="lblNotes" Content="Anteckningar:" Canvas.Left="594" Canvas.Top="176"/>
+                    <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="594" Canvas.Top="403" Width="121"/>
+                    <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="594" Canvas.Top="434" Width="121"/>
+                    <Label x:Name="lbTotalDriven" Content="" Canvas.Left="165" Canvas.Top="123" Width="36" RenderTransformOrigin="1.677,0.752"/>
+                    <Button x:Name="btnUpdateTotalDriven" Content="Uppdatera
+                            " Canvas.Left="49" Canvas.Top="122" Width="75"/>
+                    <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="129" Canvas.Top="292" Width="54"/>
+                    <ComboBox x:Name="cbCurrencyCountryOne" Canvas.Left="281" Canvas.Top="127" Width="120"/>
+                    <Label x:Name="lbCountryOne" Content="Konvertera från:" Canvas.Left="281" Canvas.Top="96"/>
+                    <Label x:Name="lbValutaKonvertering" Content="Valutakonvertering" Canvas.Left="369" Canvas.Top="73"/>
+                    <ComboBox x:Name="cbCurrencyCountryTwo" Canvas.Left="445" Canvas.Top="127" Width="120"/>
+                    <Label x:Name="lbCountryTwo" Content="Konvertera till:" Canvas.Left="445" Canvas.Top="96"/>
+                    <TextBox x:Name="tbValue" Height="23" Canvas.Left="281" TextWrapping="Wrap" Text="" Canvas.Top="194" Width="120"/>
+                    <Label x:Name="lbValue" Content="Belopp:" Canvas.Left="281" Canvas.Top="168"/>
+                    <Label x:Name="lbNewValue" Content="" Canvas.Left="451" Canvas.Top="194" Width="95"/>
 
 
                 </Canvas>
