--- a/Scrumproject/GUI/MainWindow.xaml
+++ b/Scrumproject/GUI/MainWindow.xaml
@@ -46,7 +46,7 @@
                     <Label x:Name="lbLand" Content="Land" Canvas.Left="207" Canvas.Top="179" RenderTransformOrigin="0.362,-0.746" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <TextBox x:Name="lbCarTripLengthKm" Height="23" Canvas.Left="187" TextWrapping="Wrap" Text="Km" Canvas.Top="88" Width="102" Background="White"/>
                     <Label x:Name="lbWhatHaveIDoneToday" Content="Vad har gjorts under resan:" Canvas.Left="594" Canvas.Top="23" RenderTransformOrigin="0.659,0.185" Foreground="White" FontSize="16" FontWeight="Bold"/>
-                    <TextBox x:Name="tbDoneOnTrip" Height="113" Canvas.Left="594" TextWrapping="Wrap" Text="" Canvas.Top="54" Width="153" Background="White"/>
+                    <TextBox x:Name="tbDoneOnTrip" Height="113" Canvas.Left="594" TextWrapping="Wrap" Text="" Canvas.Top="54" Width="214" Background="White"/>
                     <TextBox Height="23" Canvas.Left="187" TextWrapping="Wrap" Text="" Canvas.Top="60" Width="102" Background="White"/>
                     <ComboBox Canvas.Left="207" Canvas.Top="210" Width="120"/>
                     <ListView Height="126" Canvas.Left="35" Canvas.Top="180" Width="100" Background="White">
@@ -57,7 +57,7 @@
                         </ListView.View>
                     </ListView>
                     <Button Content="Spara Kvitto
-                            " Canvas.Left="80" Canvas.Top="468" Width="121" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
+                            " Canvas.Left="80" Canvas.Top="468" Width="121" RenderTransformOrigin="0.77,2.2" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="29,1,1,1"/>
                     <Button x:Name="btnUploadReceipt" Content="Bläddra" Canvas.Left="80" Canvas.Top="390" Width="121" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
                     <TextBox x:Name="tbReceiptFile" Height="23" Canvas.Left="35" TextWrapping="Wrap" Text="" Canvas.Top="362" Width="166" RenderTransformOrigin="0.67,0.409" Background="White"/>
                     <TextBox x:Name="tbSum" Height="23" Canvas.Left="35" TextWrapping="Wrap" Text="" Canvas.Top="442" Width="163" RenderTransformOrigin="0.5,0.5" Background="White">
@@ -79,24 +79,24 @@
                     </ListView>
                     <Button x:Name="btnRemoveSelectedReceipt" Content="Ta bort kvitto
                             " Canvas.Left="321" Canvas.Top="505" Width="80" RenderTransformOrigin="1.09,0.237" FontFamily="Myriad Pro" BorderBrush="{x:Null}" Foreground="Black" Background="White"/>
-                    <Label x:Name="lbReceipts" Content="Kvitton för resa" Canvas.Left="310" Canvas.Top="369" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
+                    <Label x:Name="lbReceipts" Content="Kvitton för resa" Canvas.Left="289" Canvas.Top="369" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label Content="Belopp för kvitto" Canvas.Left="31" Canvas.Top="413" Width="144" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Label Content="Ladda upp kvitto
                            " Canvas.Left="31" Canvas.Top="334" RenderTransformOrigin="0.537,0.874" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Button x:Name="btnSaveDraft" Content="Spara utkast" Canvas.Left="739" Canvas.Top="490" Width="84" RenderTransformOrigin="0.618,-0.243" FontFamily="Myriad Pro" BorderBrush="{x:Null}" Foreground="Black" Background="White"/>
                     <Button x:Name="btnSendReport" Content="Skicka Rapport
-                            " Canvas.Left="704" Canvas.Top="524" Width="119" FontFamily="Myriad Pro" BorderBrush="{x:Null}" Foreground="Black" Background="White" Height="30" Click="btnSendReport_Click"/>
+                            " Canvas.Left="704" Canvas.Top="524" Width="119" FontFamily="Myriad Pro" BorderBrush="{x:Null}" Foreground="Black" Background="White" Height="30" Click="btnSendReport_Click" Padding="20,1,1,1"/>
                     <Label Content="Maxbelopp för land
                            " Canvas.Left="200" Canvas.Top="279" Width="163" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Button x:Name="btnSaveStartCountry" Content="Spara land" Canvas.Left="35" Canvas.Top="311" Width="66" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
                     <Label x:Name="lbMaxSumSpecificCountry" Content="" Canvas.Left="363" Canvas.Top="279" RenderTransformOrigin="1.556,2.432" Width="93"/>
-                    <TextBox x:Name="tbNotes" Height="178" Canvas.Left="594" TextWrapping="Wrap" Text="" Canvas.Top="207" Width="153" Background="White"/>
+                    <TextBox x:Name="tbNotes" Height="178" Canvas.Left="594" TextWrapping="Wrap" Text="" Canvas.Top="207" Width="214" Background="White"/>
                     <Label x:Name="lblNotes" Content="Anteckningar:" Canvas.Left="594" Canvas.Top="180" Foreground="White" FontWeight="Bold" FontSize="16"/>
                     <Button x:Name="btnLoadNotes" Content="Ladda Anteckningar" Canvas.Left="594" Canvas.Top="390" Width="121" Foreground="Black" FontFamily="Myriad Pro" Background="White" BorderBrush="{x:Null}"/>
                     <Button x:Name="btnSaveNotes" Content="Spara Anteckningar" Canvas.Left="594" Canvas.Top="413" Width="121" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
                     <Label x:Name="lbTotalDriven" Content="" Canvas.Left="206" Canvas.Top="339" Width="36" RenderTransformOrigin="1.677,0.752"/>
                     <Button x:Name="btnUpdateTotalDriven" Content="Uppdatera
-                            " Canvas.Left="187" Canvas.Top="116" Width="75" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
+                            " Canvas.Left="187" Canvas.Top="116" Width="75" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}" Padding="10,1,1,1"/>
                     <Button x:Name="btnDeleteCountry" Content="Ta Bort" Canvas.Left="121" Canvas.Top="311" Width="54" FontFamily="Myriad Pro" Background="White" Foreground="Black" BorderBrush="{x:Null}"/>
                     <ComboBox x:Name="cbCurrencyCountryOne" Canvas.Left="426" Canvas.Top="105" Width="120"/>
                     <Label x:Name="lbCountryOne" Content="Konvertera från:" Canvas.Left="294" Canvas.Top="96" Background="{x:Null}" Foreground="White" FontWeight="Bold" FontSize="16"/>
